﻿IMPROVEMENTS / FIXES
- UI:
	- Improve prevention of click-through of various windows in the editor.
	- Open sections of the AI GUI now remain open when switching between flight and editor.
- Weapons:
	- Adjust bullet tracers to lead up to their current position instead of from their previous position.
	- Reduce bullet tracer visual glitching due to krakensbane adjustments.
- RWP:
	- For S6R10, GM kill craft that lack propulsion and are significantly beyond the asteroid field radius.

v1.7.1.0
IMPROVEMENTS / FIXES
- General:
	- Add a SimpleRepaint MM patch to ignore incompatible parts.
	- Fix typos and duplicates in the changelog.
- Armor:
	- Add a max armor limit slider (under General Slider Settings) to limit the max thickness of armor. Default: unclamped.
- UI:
	- Team Icon text now scales with icon scale.
- AI:
	- Orbital AI:
		- Adds ability to use controllable sidemounted engines as RCS thrusters.
		- Add toggles to disable use of RCS for translation and rotation.
		- Adds Zero-throttle firing range setting that will override maneuvering orientation in favor of pointing ship in attack Vector direction within set distance.
		- AI now takes target acceleration/velocity into account when accelerating to engagement speed/killing velocity.
		- Adjustments to the hasPropulsion check to properly detect when a vessel no longer has propulsion.
- Detectors / Countermeasures:
	- Allow higher precision for CM intervals and delays in the WM right-click menu.
	- Fix invalid C# syntax in the TWS radar .cfg file.
- Competition:
	- Auto-generated tournaments use the last used world.
	- Fix ramming scoring to also work for orbital AI.
- Game Modes:
	- Sanitise the waypoint course index in the vessel spawner window in case the course list has changed.
	- Asteroid Field:
		- When resetting asteroid fields, destroy those that have switched SoI as they don't reset properly.
		- Adjust the asteroid attraction to be 20% of the field radius instead of hard-coded to 1km.